--- a/src/server/scripts/Commands/CMakeLists.txt
+++ b/src/server/scripts/Commands/CMakeLists.txt
@@ -16,6 +16,7 @@ set(scripts_STAT_SRCS
 #  Commands/cs_wp.cpp
 #  Commands/cs_titles.cpp
 #  Commands/cs_quest.cpp
+  Commands/cs_bf.cpp
   Commands/cs_reload.cpp
 #  Commands/cs_list.cpp
 #  Commands/cs_lookup.cpp
