--- a/src/server/scripts/Custom/CMakeLists.txt
+++ b/src/server/scripts/Custom/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(scripts_STAT_SRCS
   ${scripts_STAT_SRCS}
     Custom/Gossip_CheckCombat.cpp
+    Custom/System_OnKill.cpp
 )
 
 message("  -> Prepared: Custom")
