--- a/src/server/scripts/Custom/CMakeLists.txt
+++ b/src/server/scripts/Custom/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(scripts_STAT_SRCS
   ${scripts_STAT_SRCS}
     Custom/Gossip_CheckCombat.cpp
-    Custom/System_OnKill.cpp
+    Custom/Npc_Beastmaster.cpp
+    Custom/pvp_System.cpp
 )
 
 message("  -> Prepared: Custom")
